# Script_Linux_Debian

./: .gitignore  README.md  install_debian12_full_stack.sh
backend/: .env.example  README.md  pyproject.toml  run_automation_worker.sh  run_dev.sh  run_glpi_analytics_sync.sh  run_glpi_backfill.sh
backend/app/: __init__.py  main.py
backend/app/agent_runtime/: __init__.py  graph.py  knowledge.py  memory_store.py  policies.py  state.py
backend/app/api/: __init__.py  runtime_dashboard.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/maintenance/: glpi_analytics_sync.py  glpi_backfill.py
backend/app/orchestration/: __init__.py  helpdesk.py
backend/app/schemas/: __init__.py  helpdesk.py
backend/app/services/: __init__.py  ansible_runner.py  automation.py  docker_runtime.py  exceptions.py  glpi.py  glpi_analytics.py  glpi_backfill.py  identity.py  intake.py  job_queue.py  llm.py  operational_store.py  ticket_analytics_store.py  triage.py  whatsapp.py  zabbix.py
backend/app/workers/: __init__.py  automation_worker.py
backend/data/: identities.json  identities.lab.json
backend/tests/: conftest.py  test_ansible_runner.py  test_automation_service.py  test_automation_worker.py  test_config.py  test_glpi_analytics.py  test_glpi_backfill.py  test_glpi_client.py  test_health.py  test_identity_service.py  test_integration_clients.py  test_job_queue.py  test_llm.py  test_llm_generate.py  test_operational_store.py  test_ticket_analytics_store.py  test_triage_resolution.py  test_whatsapp_client.py  test_zabbix_client.py
(+52 files in other folders)
