[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpdesk-orchestrator"
version = "0.1.0"
description = "Backend MVP para integração entre WhatsApp, GLPI e Zabbix."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core>=2.16,<3.0",
    "ansible-runner>=2.4,<3.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.10,<3.0",
    "redis>=5.2,<6.0",
    "uvicorn[standard]>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
